k8s/workerservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workerservice
spec:
  type: ClusterIP
  selector:
    app: workerservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8083
