k8s/workerservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workerservice-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /workerservice
            pathType: Prefix
            backend:
              service:
                name: workerservice
                port:
                  number: 80
